// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`入口导出清单 > 导出名列表被锁定 1`] = `
[
  "AdditionalType",
  "ApiError",
  "BilibiliApiRoutes",
  "BilibiliApplyCaptchaParamsSchema",
  "BilibiliArticleCardParamsSchema",
  "BilibiliArticleInfoParamsSchema",
  "BilibiliArticleParamsSchema",
  "BilibiliAv2BvParamsSchema",
  "BilibiliBangumiInfoParamsSchema",
  "BilibiliBangumiStreamParamsSchema",
  "BilibiliBv2AvParamsSchema",
  "BilibiliColumnInfoParamsSchema",
  "BilibiliCommentParamsSchema",
  "BilibiliCommentReplyParamsSchema",
  "BilibiliDanmakuParamsSchema",
  "BilibiliDynamicParamsSchema",
  "BilibiliEmojiParamsSchema",
  "BilibiliFetcherMethods",
  "BilibiliInternalMethods",
  "BilibiliLiveParamsSchema",
  "BilibiliLoginParamsSchema",
  "BilibiliMethodMapping",
  "BilibiliMethodRoutes",
  "BilibiliMethodToFetcher",
  "BilibiliQrcodeParamsSchema",
  "BilibiliQrcodeStatusParamsSchema",
  "BilibiliUserParamsSchema",
  "BilibiliValidateCaptchaParamsSchema",
  "BilibiliValidationSchemas",
  "BilibiliVideoDownloadParamsSchema",
  "BilibiliVideoParamsSchema",
  "CommentType",
  "CreateApp",
  "DouyinApiRoutes",
  "DouyinCommentParamsSchema",
  "DouyinCommentReplyParamsSchema",
  "DouyinDanmakuParamsSchema",
  "DouyinEmojiListParamsSchema",
  "DouyinEmojiProParamsSchema",
  "DouyinFetcherMethods",
  "DouyinHotWordsParamsSchema",
  "DouyinInternalMethods",
  "DouyinLiveRoomParamsSchema",
  "DouyinMethodMapping",
  "DouyinMethodRoutes",
  "DouyinMethodToFetcher",
  "DouyinMusicParamsSchema",
  "DouyinQrcodeParamsSchema",
  "DouyinSearchParamsSchema",
  "DouyinUserListParamsSchema",
  "DouyinUserParamsSchema",
  "DouyinValidationSchemas",
  "DouyinWorkParamsSchema",
  "DynamicType",
  "KuaishouApiRoutes",
  "KuaishouCommentParamsSchema",
  "KuaishouEmojiParamsSchema",
  "KuaishouFetcherMethods",
  "KuaishouInternalMethods",
  "KuaishouLiveRoomInfoParamsSchema",
  "KuaishouMethodMapping",
  "KuaishouMethodRoutes",
  "KuaishouMethodToFetcher",
  "KuaishouUserProfileParamsSchema",
  "KuaishouUserWorkListParamsSchema",
  "KuaishouValidationSchemas",
  "KuaishouVideoParamsSchema",
  "MajorType",
  "MethodMaps",
  "ValidationError",
  "XiaohongshuApiRoutes",
  "XiaohongshuFetcherMethods",
  "XiaohongshuInternalMethods",
  "XiaohongshuMethodMapping",
  "XiaohongshuMethodRoutes",
  "XiaohongshuMethodToFetcher",
  "XiaohongshuValidationSchemas",
  "amagi",
  "amagiEvents",
  "av2bv",
  "bilibiliApiUrls",
  "bilibiliErrorCodeMap",
  "bilibiliFetcher",
  "bilibiliUtils",
  "bv2av",
  "checkPassportQrcode",
  "createAmagiClient",
  "createBilibiliRoutes",
  "createBoundBilibiliFetcher",
  "createBoundDouyinFetcher",
  "createBoundKuaishouFetcher",
  "createBoundXiaohongshuFetcher",
  "createDouyinRoutes",
  "createErrorResponse",
  "createKuaishouRoutes",
  "createSuccessResponse",
  "createXiaohongshuRoutes",
  "default",
  "douyinApiUrls",
  "douyinFetcher",
  "douyinPassport",
  "douyinSign",
  "douyinUtils",
  "emitApiError",
  "emitApiSuccess",
  "emitHttpRequest",
  "emitHttpResponse",
  "emitLog",
  "emitLogDebug",
  "emitLogError",
  "emitLogInfo",
  "emitLogMark",
  "emitLogWarn",
  "emitNetworkError",
  "emitNetworkRetry",
  "fetchData",
  "fetchResponse",
  "getApiRoute",
  "getEnglishMethodName",
  "getHeadersAndData",
  "handleError",
  "isNetworkErrorResult",
  "isSmsCodeVerifyWay",
  "kuaishouApiUrls",
  "kuaishouFetcher",
  "kuaishouSign",
  "kuaishouUtils",
  "parseDmSegMobileReply",
  "qtparam",
  "registerBilibiliRoutes",
  "registerDouyinRoutes",
  "registerKuaishouRoutes",
  "registerXiaohongshuRoutes",
  "requestPassportQrcode",
  "sendPassportVerifyCode",
  "toFetcherMethod",
  "validateBilibiliParams",
  "validateDouyinParams",
  "validateKuaishouParams",
  "validatePassportVerifyCode",
  "validateXiaohongshuParams",
  "wbi_sign",
  "xiaohongshuApiUrls",
  "xiaohongshuFetcher",
  "xiaohongshuSign",
  "xiaohongshuUtils",
]
`;

exports[`入口导出清单 > 每个导出的运行时类型被锁定 1`] = `
{
  "AdditionalType": "object",
  "ApiError": "function",
  "BilibiliApiRoutes": "object",
  "BilibiliApplyCaptchaParamsSchema": "object",
  "BilibiliArticleCardParamsSchema": "object",
  "BilibiliArticleInfoParamsSchema": "object",
  "BilibiliArticleParamsSchema": "object",
  "BilibiliAv2BvParamsSchema": "object",
  "BilibiliBangumiInfoParamsSchema": "object",
  "BilibiliBangumiStreamParamsSchema": "object",
  "BilibiliBv2AvParamsSchema": "object",
  "BilibiliColumnInfoParamsSchema": "object",
  "BilibiliCommentParamsSchema": "object",
  "BilibiliCommentReplyParamsSchema": "object",
  "BilibiliDanmakuParamsSchema": "object",
  "BilibiliDynamicParamsSchema": "object",
  "BilibiliEmojiParamsSchema": "object",
  "BilibiliFetcherMethods": "object",
  "BilibiliInternalMethods": "object",
  "BilibiliLiveParamsSchema": "object",
  "BilibiliLoginParamsSchema": "object",
  "BilibiliMethodMapping": "object",
  "BilibiliMethodRoutes": "object",
  "BilibiliMethodToFetcher": "object",
  "BilibiliQrcodeParamsSchema": "object",
  "BilibiliQrcodeStatusParamsSchema": "object",
  "BilibiliUserParamsSchema": "object",
  "BilibiliValidateCaptchaParamsSchema": "object",
  "BilibiliValidationSchemas": "object",
  "BilibiliVideoDownloadParamsSchema": "object",
  "BilibiliVideoParamsSchema": "object",
  "CommentType": "object",
  "CreateApp": "function",
  "DouyinApiRoutes": "object",
  "DouyinCommentParamsSchema": "object",
  "DouyinCommentReplyParamsSchema": "object",
  "DouyinDanmakuParamsSchema": "object",
  "DouyinEmojiListParamsSchema": "object",
  "DouyinEmojiProParamsSchema": "object",
  "DouyinFetcherMethods": "object",
  "DouyinHotWordsParamsSchema": "object",
  "DouyinInternalMethods": "object",
  "DouyinLiveRoomParamsSchema": "object",
  "DouyinMethodMapping": "object",
  "DouyinMethodRoutes": "object",
  "DouyinMethodToFetcher": "object",
  "DouyinMusicParamsSchema": "object",
  "DouyinQrcodeParamsSchema": "object",
  "DouyinSearchParamsSchema": "object",
  "DouyinUserListParamsSchema": "object",
  "DouyinUserParamsSchema": "object",
  "DouyinValidationSchemas": "object",
  "DouyinWorkParamsSchema": "object",
  "DynamicType": "object",
  "KuaishouApiRoutes": "object",
  "KuaishouCommentParamsSchema": "object",
  "KuaishouEmojiParamsSchema": "object",
  "KuaishouFetcherMethods": "object",
  "KuaishouInternalMethods": "object",
  "KuaishouLiveRoomInfoParamsSchema": "object",
  "KuaishouMethodMapping": "object",
  "KuaishouMethodRoutes": "object",
  "KuaishouMethodToFetcher": "object",
  "KuaishouUserProfileParamsSchema": "object",
  "KuaishouUserWorkListParamsSchema": "object",
  "KuaishouValidationSchemas": "object",
  "KuaishouVideoParamsSchema": "object",
  "MajorType": "object",
  "MethodMaps": "object",
  "ValidationError": "function",
  "XiaohongshuApiRoutes": "object",
  "XiaohongshuFetcherMethods": "object",
  "XiaohongshuInternalMethods": "object",
  "XiaohongshuMethodMapping": "object",
  "XiaohongshuMethodRoutes": "object",
  "XiaohongshuMethodToFetcher": "object",
  "XiaohongshuValidationSchemas": "object",
  "amagi": "function",
  "amagiEvents": "object",
  "av2bv": "function",
  "bilibiliApiUrls": "object",
  "bilibiliErrorCodeMap": "object",
  "bilibiliFetcher": "object",
  "bilibiliUtils": "object",
  "bv2av": "function",
  "checkPassportQrcode": "function",
  "createAmagiClient": "function",
  "createBilibiliRoutes": "function",
  "createBoundBilibiliFetcher": "function",
  "createBoundDouyinFetcher": "function",
  "createBoundKuaishouFetcher": "function",
  "createBoundXiaohongshuFetcher": "function",
  "createDouyinRoutes": "function",
  "createErrorResponse": "function",
  "createKuaishouRoutes": "function",
  "createSuccessResponse": "function",
  "createXiaohongshuRoutes": "function",
  "default": "function",
  "douyinApiUrls": "object",
  "douyinFetcher": "object",
  "douyinPassport": "object",
  "douyinSign": "function",
  "douyinUtils": "object",
  "emitApiError": "function",
  "emitApiSuccess": "function",
  "emitHttpRequest": "function",
  "emitHttpResponse": "function",
  "emitLog": "function",
  "emitLogDebug": "function",
  "emitLogError": "function",
  "emitLogInfo": "function",
  "emitLogMark": "function",
  "emitLogWarn": "function",
  "emitNetworkError": "function",
  "emitNetworkRetry": "function",
  "fetchData": "function",
  "fetchResponse": "function",
  "getApiRoute": "function",
  "getEnglishMethodName": "function",
  "getHeadersAndData": "function",
  "handleError": "function",
  "isNetworkErrorResult": "function",
  "isSmsCodeVerifyWay": "function",
  "kuaishouApiUrls": "object",
  "kuaishouFetcher": "object",
  "kuaishouSign": "function",
  "kuaishouUtils": "object",
  "parseDmSegMobileReply": "function",
  "qtparam": "function",
  "registerBilibiliRoutes": "function",
  "registerDouyinRoutes": "function",
  "registerKuaishouRoutes": "function",
  "registerXiaohongshuRoutes": "function",
  "requestPassportQrcode": "function",
  "sendPassportVerifyCode": "function",
  "toFetcherMethod": "function",
  "validateBilibiliParams": "function",
  "validateDouyinParams": "function",
  "validateKuaishouParams": "function",
  "validatePassportVerifyCode": "function",
  "validateXiaohongshuParams": "function",
  "wbi_sign": "function",
  "xiaohongshuApiUrls": "object",
  "xiaohongshuFetcher": "object",
  "xiaohongshuSign": "function",
  "xiaohongshuUtils": "object",
}
`;

exports[`客户端实例形状 > client.bilibili 的键集合被锁定 1`] = `
[
  "bilibiliApiUrls",
  "danmaku",
  "fetcher",
  "sign",
]
`;

exports[`客户端实例形状 > client.douyin 的键集合被锁定 1`] = `
[
  "douyinApiUrls",
  "fetcher",
  "passport",
  "sign",
]
`;

exports[`客户端实例形状 > client.kuaishou 的键集合被锁定 1`] = `
[
  "fetcher",
  "kuaishouApiUrls",
  "sign",
]
`;

exports[`客户端实例形状 > client.xiaohongshu 的键集合被锁定 1`] = `
[
  "fetcher",
  "sign",
  "xiaohongshuApiUrls",
]
`;

exports[`客户端实例形状 > 顶层键被锁定 1`] = `
[
  "bilibili",
  "douyin",
  "events",
  "kuaishou",
  "on",
  "once",
  "startServer",
  "xiaohongshu",
]
`;

exports[`构造函数上的静态属性 > 静态属性集合被锁定 1`] = `
[
  "bilibili",
  "bilibiliFetcher",
  "createBoundBilibiliFetcher",
  "createBoundDouyinFetcher",
  "createBoundKuaishouFetcher",
  "createBoundXiaohongshuFetcher",
  "douyin",
  "douyinFetcher",
  "events",
  "kuaishou",
  "kuaishouFetcher",
  "on",
  "once",
  "version",
  "xiaohongshu",
  "xiaohongshuFetcher",
]
`;
